--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,8 @@
     "angular-mocks": "~1.5.0",
     "html5-boilerplate": "^5.3.0",
     "jquery": "~3.2.1",
-    "bootstrap": "v4.0.0-beta"
+    "bootstrap": "v4.0.0-beta",
+    "lodash": "~4.17.4",
+    "components-font-awesome": "~4.7.0"
   }
 }
